<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="?android:textColorSecondary" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/item_phone_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNumber"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/item_info_placeholder" />

        <Button
            android:id="@+id/reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/reservation"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/call"
            android:onClick="call"
            android:layout_toEndOf="@id/reservation" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
